// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCollapsibleNav close button can be hidden 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
        id="id"
        style="width: 320px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiCollapsibleNav does not render if isOpen is false 1`] = `null`;

exports[`OuiCollapsibleNav is rendered 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-label="aria-label"
        class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav testClass1 testClass2"
        data-test-subj="test subject string"
        id="id"
        style="width: 320px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiCollapsibleNav props accepts OuiFlyout props 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />,
  <div
    data-focus-lock-disabled="false"
  >
    <nav
      class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
      id="id"
      style="width: 240px;"
      tabindex="-1"
    >
      <button
        aria-label="Close this dialog"
        class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
        data-test-subj="ouiFlyoutCloseButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="ouiButtonIcon__icon"
          color="inherit"
          data-ouiicon-type="cross"
        />
      </button>
    </nav>
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />,
]
`;

exports[`OuiCollapsibleNav props button 1`] = `
Array [
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-pressed="true"
  />,
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
        id="id"
        style="width: 320px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiCollapsibleNav props dockedBreakpoint 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
        id="id"
        style="width: 320px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiCollapsibleNav props isDocked 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="ouiFlyout ouiFlyout--push ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
      id="id"
      style="width:320px"
      tabindex="-1"
    />
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`OuiCollapsibleNav props onClose 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
        id="id"
        style="width: 320px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`OuiCollapsibleNav props showButtonIfDocked 1`] = `
Array [
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-pressed="true"
  />,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />,
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="ouiFlyout ouiFlyout--push ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
      id="id"
      style="width: 320px;"
      tabindex="-1"
    />
  </div>,
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />,
]
`;

exports[`OuiCollapsibleNav props size 1`] = `
Array [
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
        id="id"
        style="width: 240px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;
